--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Micromamba
-        uses: mamba-org/provision-with-micromamba@v15
+        uses: mamba-org/setup-micromamba@v1.4.0
         with:
           environment-file: environment.yml
           cache-downloads: true
-          cache-env: true
+          cache-environment: true
 
       - name: Disable notebook cache for scheduled jobs
         if: github.event_name == 'schedule'
